# chatwork.py

./: README.rst  pyproject.toml  setup.py
chatwork/: __init__.py  client.py
